added category summery and sorting in reprts page and used it in the dashboard as the main page.